# counterfactual-xai

./: ImageNet KNNSVM.ipynb  ImageNet.py  ImageNet_KNN.py  MNIST-Kernel.ipynb  NewResNet50.ipynb  Resnet50New.py  TwoMoon.ipynb  config.json  find_w.py  pyproject.toml  run_resnet50.sh  sample-config.json  sync.sh
config/: data_types.py
convert/: find_indices.py  train_on_missclassified.py
kmeans/: KMeans.ipynb  kmeans.py  run.sh  run_kmeans.py
playground/: TwoMoon_KKN.ipynb  TwoMoon_SVM.ipynb
