[tool.poetry]
name = "deterministic-uncertainty-quantification"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torchvision = "0.6.1"
numpy = "^1.20.2"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
scikit-learn = "^0.24.1"
tqdm = "^4.60.0"
pytorch-ignite = "^0.4.4"
pytorch-lightning = "^1.2.10"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
mypy = "^0.812"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
